Changed the html language attribtue to en, and then fixed contrast issues.

--- a/style.css
+++ b/style.css
@@ -21,8 +21,6 @@ img {
   object-fit: cover;
 }
 
-.carousel-inner img {
-}
 
 .carousel-control-next {
   background-color: lightgray; /* Set the background color to blue */
@@ -56,4 +54,34 @@ img {
 }
 .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3e%3cpath d='M6.293 0.293c.39.39.39 1.024 0 1.414L3.414 4l2.879 2.879c.39.39.39 1.024 0 1.414-.39.39-1.024.39-1.414 0L.293 4.707c-.39-.39-.39-1.024 0-1.414L4.879.293c.39-.39 1.024-.39 1.414 0z'/%3e%3c/svg%3e");
+}
+
+a {
+  color: #4b2354;
+}
+
+a:hover {
+  color: #6d0c0c;
+}
+
+#english-button {
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #333;
+}
+
+#english-button:hover {
+  text-color: #6d0c0c;
+  background-color: #fff2f2;
+}
+
+#arabic-button {
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #333;
+}
+
+#arabic-button:hover {
+  text-color: #6d0c0c;
+  background-color: #fff2f2;
 }
